title and scrollbar fix

--- a/datasearcher/style.css
+++ b/datasearcher/style.css
@@ -1,6 +1,5 @@
 * {
   scrollbar-width: thin;
-  scrollbar-color: black;
 }
 
 .search-wrapper {
